--- a/src/components/TodoListTemplate.css
+++ b/src/components/TodoListTemplate.css
@@ -1,23 +1,23 @@
 .todo-list-template {
-    background: white;
+    background: #fff0f6;
     width: 512px;
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23); /* 그림자 */ 
     margin: 0 auto; /* 페이지 중앙 정렬 */
-    margin-top: 4rem;
+    margin-top: 10rem;
   }
   
   .title {
-    padding: 2rem;
-    font-size: 2.5rem;
+    padding: 1rem;
+    font-size: 3rem;
     text-align: center;
     font-weight: 100;
-    background: #22b8cf;;
+    background: #fa5252;;
     color: white;
   }
   
   .form-wrapper {
     padding: 1rem;
-    border-bottom: 1px solid #22b8cf;
+    border-bottom: 1px solid #ff6b6b;
   }
   
   .todos-wrapper {
